--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://npmcdn.com/aframe-event-set-component@3.0.1"></script>
     <script src="https://npmcdn.com/aframe-layout-component@3.0.1"></script>
     <script src="https://npmcdn.com/aframe-template-component@3.1.1"></script>
-    <script src="http://localhost:3000/Script/thumbnail.js"></script>
+    <script src="/Script/thumbnail.js"></script>
     </head>
   <body>
 
